--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hms-dbmi/viv": "^0.13.3",
+    "papaparse": "^5.3.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
